# fast_test_async

./: .gitignore  README.md  launch.kitty-session  pyproject.toml
fast_test_async/: app.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 2d924faeb65c_created_column_update_at_in_users_table.py  cd4fdf98115f_created_user_table.py
pages/: health_check.html
tests/: conftest.py  test_app.py  test_bd.py
