[project]
name = "fast-test-async"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Nascimento",email = "joaovitornas1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

# ============================
# Lint e formatação (Ruff)
# ============================
[tool.ruff]
line-length = 79
target-version = "py314"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__","migrations", "tests/**"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "PL",
    "PT",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" =["S101", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "**/tests/**",
    "tests/**"
]
venv = ".venv"
venvPath = "."

# Pytest
[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings" # Retira todos os erros de outras bibliotecas

# ===========================
# Taskipy
# ===========================

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_test_async/app.py' #Corrigir nome do projeto Sempre
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_test_async -vv' # -s mostra stdout | -x para quando falha
post_test = 'coverage html'
